--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #4b0082; /* Dark purple background */
+    background-color: #4b0082;
     color: #fff;
     padding: 1em;
     position: relative;
